--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">SSup90's Project</div>
+                <div class="intro-heading">대중교통 기반 물류 운송 매칭 시스템</div>
                 <a href="#services" class="btn btn-xl">Tell Me More</a>
             </div>
         </div>
